tests/compile-tests/garbage.stderr
error[E0277]: the trait bound `Expr: From<bool>` is not satisfied
 --> tests/compile-tests/garbage.rs:7:8
  |
7 |     c!(x + y + 2*z + 1 <= 0 in 1..0);
  |        ^ the trait `From<bool>` is not implemented for `Expr`
  |
  = help: the following other types implement trait `From<T>`:
            `Expr` implements `From<&T>`
            `Expr` implements `From<LinExpr>`
            `Expr` implements `From<QuadExpr>`
            `Expr` implements `From<Var>`
            `Expr` implements `From<f32>`
            `Expr` implements `From<f64>`
            `Expr` implements `From<i16>`
            `Expr` implements `From<i32>`
          and $N others

error[E0605]: non-primitive cast: `Var` as `f64`
 --> tests/compile-tests/garbage.rs:8:20
  |
8 |     c!(z + y in 0..z);
  |                    ^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `Var` as `f64`
  --> tests/compile-tests/garbage.rs:10:16
   |
10 |     c!(y in x..z);
   |                ^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0605]: non-primitive cast: `Var` as `f64`
  --> tests/compile-tests/garbage.rs:10:13
   |
10 |     c!(y in x..z);
   |             ^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object
